--- a/package.xml
+++ b/package.xml
@@ -52,10 +52,14 @@
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>raspi_laundry</build_depend>
+  <build_depend>raspi_laundry_containing_custom_msg</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>raspi_laundry</exec_depend>
+  <exec_depend>raspi_laundry_containing_custom_msg</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
