--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
- add_executable(laundry_node src/laundry_node.cpp include/RasPiDS3.cpp)
+ add_executable(gui_operator src/gui_operator.cpp include/RasPiDS3.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -148,14 +148,20 @@ include_directories(
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(laundry_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(gui_operator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(laundry_node
+ target_link_libraries(gui_operator
    ${catkin_LIBRARIES}
    ${gtk+-3.0_LIBRARIES}
  )
 
+add_executable(gui_display src/gui_display.cpp)
+add_dependencies(gui_display ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(gui_display
+  ${catkin_LIBRARIES}
+  ${gtk+-3.0_LIBRARIES}
+)
 
 # add_executable(serial_test src/serial_test.cpp)
 # add_dependencies(serial_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
