シーツ引っかかる

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(laundry)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
- add_compile_options(-D__LINUX__ -std=c++14)
+ add_compile_options(-D__LINUX__ -std=c++14 -Wall)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
